--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
-<script type="text/javascript" src="../js/cube.js"></script>
 </head>
 <body>
+<script type="text/javascript" src="js/cube.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="js/experiment.js"></script>
 <!-- Main Container -->
 <div class="container"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
