--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <script type="text/javascript" src="js/cube.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="js/experiment.js"></script>
+<script src="js/ex.js"></script>
 <!-- Main Container -->
 <div class="container"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
