--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../css/main.css" rel="stylesheet" type="text/css">
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<link rel="stylesheet" href="../css/ex.css" />
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
@@ -18,9 +18,10 @@
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
-<div id="wrapper">
-	<div class="viewport">
-	  <div class="cube">
+<body class="experiment">
+     <div id="wrapper">
+	<article class="viewport">
+	  <section class="cube">
 		  <div class="side">
 		  	<div class="cube-image">coming soon</div>
 		  </div>
@@ -38,9 +39,10 @@
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image active">coming soon</div>
-		  </div>
-		</div>
-	</div>
+		</section>
+	  </article>
+     </div>
+<body>
 	<center>
        <p>text only view</p>
      </center>
