--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
-<body class="experiment">
-     <div id="wrapper">
-	<article class="viewport">
-	  <section class="cube">
+    <body class="experiment">
+        <div id="wrapper">
+	   <article class="viewport">
+	     <section class="cube">
 		  <div class="side">
 		  	<div class="cube-image">coming soon</div>
 		  </div>
@@ -39,17 +39,13 @@
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image active">coming soon</div>
-		</section>
-	  </article>
-     </div>
-<body>
-	<center>
-       <p>text only view</p>
-     </center>
+		    </section>
+	  	</article>
+     	    </div>
+	<body>
+	<center><p>text only view</p></center>
 </div>
-  <footer>
-  </footer>
-  <div class="copyright">&copy;2020 <strong>elias brodsky</strong></div>
+<footer></footer>
 </div>
 <!-- Main Container Ends -->
 </body>
