--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<body>
 	<center><p>text only view</p></center>
 </div>
+<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div>
 <footer></footer>
 </div>
 <!-- Main Container Ends -->
