--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	  	</article>
      	    </div>
 	<body>
-	<center><p>text only view</p></center>
+	<center><p>text only view</p>
+	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
 </div>
-<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div>
 <footer></footer>
 </div>
 <!-- Main Container Ends -->
