--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
 <body>
-<script type="text/javascript" src="js/cube.js"></script>
+<script type="text/javascript" src="../js/cube.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="js/ex.js"></script>
+<script type="text/javascript" src="../js/ex.js"></script>
 <!-- Main Container -->
 <div class="container"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
