--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
      	    </div>
 	<body>
 	<center><p>text only view</p>
+	<div></div>
 	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
 </div>
-<footer></footer>
 </div>
 <!-- Main Container Ends -->
 </body>
