--- a/index.html
+++ b/index.html
@@ -22,23 +22,25 @@
         <div id="wrapper">
 	   <article class="viewport">
 	     <section class="cube">
-		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  <div></div>
+		  <div>
+		  	coming soon
 		  </div>
-		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  <div>
+		  	coming soon
 		  </div>
-		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  <div>
+		  	coming soon
 		  </div>
-		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  <div>
+		  	coming soon
 		  </div>
-		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  <div>
+		  	coming soon
 		  </div>
-		  <div class="side">
-		  	<div class="cube-image active">coming soon</div>
+		  <div>
+		  	coming soon
+		  </div>
 		    </section>
 	  	</article>
      	    </div>
