--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
-    <body class="experiment">
+<center><body class="experiment">
         <div id="wrapper">
 	   <article class="viewport">
 	     <section class="cube">
@@ -44,7 +44,7 @@
 		    </section>
 	  	</article>
      	    </div>
-	<body>
+	<body></center>
 	<center><p>text only view</p>
 	<br>
 	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
