--- a/index.html
+++ b/index.html
@@ -22,24 +22,23 @@
         <div id="wrapper">
 	   <article class="viewport">
 	     <section class="cube">
-		  <div></div>
 		  <div>
-		  	coming soon
+			  <p>coming soon</p>
 		  </div>
 		  <div>
-		  	coming soon
+		  	<p>coming soon</p>
 		  </div>
 		  <div>
-		  	coming soon
+		  	<p>coming soon</p>
 		  </div>
 		  <div>
-		  	coming soon
+		  	<p>coming soon</p>
 		  </div>
 		  <div>
-		  	coming soon
+		  	<p>coming soon</p>
 		  </div>
 		  <div>
-		  	coming soon
+		  	<p>coming soon</p>
 		  </div>
 		    </section>
 	  	</article>
