--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../css/main.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="..css/cube.css" />
-<link rel="stylesheet" href="../css/ex.css" />
+<link rel="stylesheet" href="..css/cube.css" type="text/css">
+<link rel="stylesheet" href="../css/ex.css" type="text/css">
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
 <body>
 <script type="text/javascript" src="../js/ex.js"></script>
+<script type="text/javascript" src="../js/cube.js"></script>
 <!-- Main Container -->
 <div class="container"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
@@ -42,8 +43,6 @@
 		    </section>
 	  	</article>
      	    </div>
-	<script type="text/javascript" src="../js/cube.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	<body></center>
 	<center><p>text only view</p>
 	<br>
