--- a/secret.html
+++ b/secret.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="https://paulrhayes.com/experiments/cube-3d/touch.html" />
     <link rel="stylesheet" href="../css/ex.css" />
     <link href="../css/main.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/cube.css" />
+    <link rel="stylesheet" href="..css/secretcube.css" />
 </head>
 <body class="experiment">
     <div class="wrapper">
@@ -47,6 +47,6 @@
 
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="../js/cube.js"></script>
+    <script src="../js/secretcube.js"></script>
 </body>
 </html>
