--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
         <div id="wrapper">
 	   <article class="viewport">
 	     <section class="cube">
-		  <div>
-			  <p>coming soon</p>
-		  </div>
-		  <div>
-		  	<p>coming soon</p>
-		  </div>
-		  <div>
-		  	<p>coming soon</p>
-		  </div>
-		  <div>
-		  	<p>coming soon</p>
-		  </div>
-		  <div>
-		  	<p>coming soon</p>
-		  </div>
-		  <div>
-		  	<p>coming soon</p>
-		  </div>
+		<div class="side">
+        	<div class="cube-image">coming soon</div>
+     		 </div>
+		  <div class="side">
+        	<div class="cube-image">coming soon</div>
+     		 </div>
+		  <div class="side">
+        	<div class="cube-image">coming soon</div>
+     		 </div>
+		  <div class="side">
+        	<div class="cube-image">coming soon</div>
+     		 </div>
+		  <div class="side">
+        	<div class="cube-image">coming soon</div>
+     		 </div>
+		  <div class="side">
+        	<div class="cube-image">coming soon</div>
+     		 </div>
 		    </section>
 	  	</article>
      	    </div>
