--- a/index.html
+++ b/index.html
@@ -5,45 +5,44 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../css/main.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="..css/cube.css" type="text/css">
-<link rel="stylesheet" href="../css/ex.css" type="text/css">
+<link href="../css/ex.css" rel="stylesheet">
 <script>var __adobewebfontsappname__="dreamweaver"</script>
-<script type="text/javascript" src="../js/ex.js"></script>
-<script type="text/javascript" src="../js/cube.js"></script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
 <body>
+<script type="text/javascript" src="../js/cube.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script type="text/javascript" src="../js/ex.js"></script>
 <!-- Main Container -->
 <div class="container"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
-<center><body class="experiment">
+    <body class="experiment">
         <div id="wrapper">
 	   <article class="viewport">
 	     <section class="cube">
-		<div class="side">
-        	<div class="cube-image">coming soon</div>
-     		 </div>
 		  <div class="side">
-        	<div class="cube-image">coming soon</div>
-     		 </div>
+		  	<div class="cube-image">coming soon</div>
+		  </div>
 		  <div class="side">
-        	<div class="cube-image">coming soon</div>
-     		 </div>
+		  	<div class="cube-image">coming soon</div>
+		  </div>
 		  <div class="side">
-        	<div class="cube-image">coming soon</div>
-     		 </div>
+		  	<div class="cube-image">coming soon</div>
+		  </div>
 		  <div class="side">
-        	<div class="cube-image">coming soon</div>
-     		 </div>
+		  	<div class="cube-image">coming soon</div>
+		  </div>
 		  <div class="side">
-        	<div class="cube-image">coming soon</div>
-     		 </div>
+		  	<div class="cube-image">coming soon</div>
+		  </div>
+		  <div class="side">
+		  	<div class="cube-image active">coming soon</div>
 		    </section>
 	  	</article>
      	    </div>
-	<body></center>
+	<body>
 	<center><p>text only view</p>
 	<br>
 	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
