--- a/secretcube.html
+++ b/secretcube.html
@@ -1,3 +1,6 @@
+<link href="../css/secretcube.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="../js/secretcube.js"></script>
+ 
 <div id="wrapper">
   <div class="viewport">
     <div class="cube">
