--- a/secretcube.html
+++ b/secretcube.html
@@ -1,5 +1,5 @@
 <link href="../css/secretcube.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="../js/secretcube.js"></script>
+<script type="text/javascript" src="../js/secretcube.js">
  
 <div id="wrapper">
   <div class="viewport">
@@ -25,3 +25,4 @@
     </div>
   </div>
 </div>
+</script>
