--- a/secretcube.html
+++ b/secretcube.html
@@ -1,5 +1,5 @@
-<link href=".css/secretcube.css" rel="stylesheet" type="text/css">
-<script src="js/secretcube.js" type="text/javascript"></script>
+<link href="../css/secretcube.css" rel="stylesheet" type="text/css">
+<script src="../js/secretcube.js" type="text/javascript"></script>
  
 <div id="wrapper">
   <div class="viewport">
