--- a/textonly.html
+++ b/textonly.html
@@ -16,11 +16,11 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
-	<center><br>
+	<center><br><br><br>
 	<p>bio</p>
 	<p>works</p>
 	<p>contact</p>
-	<br><br><br><br><br><br><br>
+	<br><br><br><br><br>
   <p>show me the cube</p>
    </div>
 	<br>
