--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  	</article>
      	    </div>
 	<body>
-	<center><p>text only view</p>
+		<center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p>
 	<br>
 	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
 </div>
