--- a/textonly.html
+++ b/textonly.html
@@ -21,7 +21,7 @@
 	<p>works</p>
 	<p>contact</p>
 	<br><br><br><br><br>
-  <p>show me the cube</p>
+		<p><a href="https://eliasbrodsky.github.io/textonly.html">show me the cube</a></p>
    </div>
 	<br>
 	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
