--- a/secretcube.html
+++ b/secretcube.html
@@ -1,6 +1,8 @@
-<link href="../css/secretcube.css" rel="stylesheet" type="text/css">
-<script src="../js/secretcube.js" type="text/javascript"></script>
- 
+<html>
+     <head>
+ <link href="../css/secretcube.css" rel="stylesheet" type="text/css">
+ </head>
+<body>
 <div id="wrapper">
   <div class="viewport">
     <div class="cube">
@@ -25,3 +27,7 @@
     </div>
   </div>
 </div>
+</body>
+<footer>
+      <script src="../js/secretcube.js" type="text/javascript"></script>
+    </footer>
