--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 <!-- Main Container Ends -->
 </body>
 <footer>
-	<script src="../js/secretcube.js" type="text/javascript"></script>
-	<!--<script type="text/javascript" src="../js/cube.js"></script>
+	<!--<script src="../js/secretcube.js" type="text/javascript"></script>-->
+	<script type="text/javascript" src="../js/cube.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script type="text/javascript" src="../js/ex.js"></script>*/-->
+	<!--<script type="text/javascript" src="../js/ex.js"></script>-->
 	</footer>
 </html>
