--- a/secretindex.html
+++ b/secretindex.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../css/main.css" rel="stylesheet" type="text/css">
+<link href="../css/secretmain.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../css/ex.css" />
 <link rel="stylesheet" href="../css/secretcube.css" />
 <script>var __adobewebfontsappname__="dreamweaver"</script>
@@ -43,12 +43,12 @@
 	<body>
 		<center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p>
 	<br>
-	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
 </div>
 </div>
 <!-- Main Container Ends -->
 </body>
 <footer>
+	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
 	<script src="../js/secretcube.js" type="text/javascript"></script>
 	</footer>
 </html>
