--- a/secretindex.html
+++ b/secretindex.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../css/secretmain.css" rel="stylesheet" type="text/css">
+<link href="../css/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../css/ex.css" />
-<link rel="stylesheet" href="../css/secretcube.css" />
+<!--<link rel="stylesheet" href="../css/secretcube.css" />-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
