--- a/secretindex.html
+++ b/secretindex.html
@@ -21,16 +21,16 @@
 	   <article class="viewport">
 	     <section class="cube">
 		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  	<div class="cube-image">bio</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  	<div class="cube-image">works</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  	<div class="cube-image">scores</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  	<div class="cube-image">contact</div>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image">coming soon</div>
