--- a/secretindex.html
+++ b/secretindex.html
@@ -21,7 +21,7 @@
 	   <article class="viewport">
 	     <section class="cube">
 		  <div class="side">
-		  	<div class="cube-image">bio</div>
+		  	<div class="cube-image"> </div>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image">works</div>
@@ -33,10 +33,10 @@
 		  	<div class="cube-image">contact</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">coming soon</div>
+		  	<div class="cube-image">bio</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image active">coming soon</div>
+		  	<div class="cube-image active">spin the cube</div>
 		    </section>
 	  	</article>
      	    </div>
