--- a/secretindex.html
+++ b/secretindex.html
@@ -41,14 +41,14 @@
 	  	</article>
      	    </div>
 	<body>
-		<center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p>
+		<center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p></center>
 	<br>
 </div>
 </div>
 <!-- Main Container Ends -->
 </body>
 <footer>
-	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
+	<center><div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
 	<script src="../js/secretcube.js" type="text/javascript"></script>
 	</footer>
 </html>
