--- a/secretindex.html
+++ b/secretindex.html
@@ -36,7 +36,7 @@
 		  	<div class="cube-image">bio</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image active">spin the cube</div>
+		  	<div class="cube-image active"> </div>
 		    </section>
 	  	</article>
      	    </div>
