--- a/secretindex.html
+++ b/secretindex.html
@@ -47,8 +47,8 @@
 </div>
 <!-- Main Container Ends -->
 </body>
-<footer>
-	<center><div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
+<center><footer>
+	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div>
 	<script src="../js/secretcube.js" type="text/javascript"></script>
-	</footer>
+	</footer></center>
 </html>
