--- a/secretindex.html
+++ b/secretindex.html
@@ -48,8 +48,8 @@
 </div>
 <!-- Main Container Ends -->
 </body>
-<!-- <center><footer>
+<center><footer>
 	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div>
 	<script src="../js/secretcube.js" type="text/javascript"></script>
-	</footer></center>-->
+	</footer></center>
 </html>
