--- a/secretindex.html
+++ b/secretindex.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Main Container -->
-<div class="container"> 
+<div class="container-fluid"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
