--- a/secretindex.html
+++ b/secretindex.html
@@ -49,7 +49,7 @@
 <!-- Main Container Ends -->
 </body>
 <center><footer>
-	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div>
+	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
 	<script src="../js/secretcube.js" type="text/javascript"></script>
 	</footer></center>
 </html>
