--- a/secretindex.html
+++ b/secretindex.html
@@ -50,6 +50,6 @@
 </body>
 <center><footer>
 	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
-	<script src="../js/secretcube.js" type="text/javascript"></script>
-	</footer></center>
-</html>
+	<script src="../js/secretcube.js" type="text/javascript"></script></footer></center></html>
+
+	
