--- a/secretindex.html
+++ b/secretindex.html
@@ -16,7 +16,7 @@
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
-<br><br>
+<br>
     <body class="experiment">
         <div id="wrapper">
 	   <article class="viewport">
@@ -48,7 +48,7 @@
 </div>
 <!-- Main Container Ends -->
 </body>
-<center><footer>
+<center><footer><br>
 	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
 	<script src="../js/secretcube.js" type="text/javascript"></script></footer></center></html>
 
