--- a/secretindex.html
+++ b/secretindex.html
@@ -42,13 +42,13 @@
 	  	</article>
      	    </div>
 	<body>
-		<center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p></center>
+		<br><center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p></center>
 	<br>
 </div>
 </div>
 <!-- Main Container Ends -->
 </body>
-<center><footer><br>
+<center><footer>
 	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
 	<script src="../js/secretcube.js" type="text/javascript"></script></footer></center></html>
 
