--- a/secretindex.html
+++ b/secretindex.html
@@ -7,8 +7,7 @@
 <link href="../css/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../css/ex.css" />
 <!--<link rel="stylesheet" href="../css/secretcube.css" />-->
-<script>var __adobewebfontsappname__="dreamweaver"</script>
-<script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/index.min.js"></script>
 </head>
 <body>
 <!-- Main Container -->
