--- a/textonly.html
+++ b/textonly.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- Main Container -->
-<div class="container"> 
+<div class="container-fluid"> 
 	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
   <p>composer</p></center>
 <!-- box -->
@@ -24,7 +24,7 @@
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
 	<br>
-	<div class="copyright">&copy;2020 <strong>elias brodsky</strong></div></center>
+	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div></center>
 </div>
 </div>
 <!-- Main Container Ends -->
