--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	  	</article>
      	    </div>
 	<body>
-		<br><center><p><a href="/">text only view</a></p></center>
+		<br><center><p><a href="https://eliasbrodsky.github.io/textonly.html">text only view</a></p></center>
 	<br>
 </div>
 </div>
