--- a/textonly.html
+++ b/textonly.html
@@ -17,10 +17,11 @@
 <!-- box -->
 <div id="wrapper">
 	<center><br><br><br>
-	<p>bio</p>
-	<p>works</p>
-	<p>contact</p>
-	<br><br><br><br><br>
+	<p><a href="/">bio</a></p>
+	<p><a href="/">works</a></p>
+	<p><a href="/">scores</a></p>
+	<p><a href="/">contact</a></p>
+	<br><br><br><br>
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
 	<br>
