--- a/textonly.html
+++ b/textonly.html
@@ -25,9 +25,11 @@
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
 	<br>
-	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div></center>
 </div>
 </div>
 <!-- Main Container Ends -->
 </body>
+<center><footer>
+	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
+	</footer></center></html>
 </html>
