--- a/textonly.html
+++ b/textonly.html
@@ -17,10 +17,10 @@
 <!-- box -->
 <div id="wrapper">
 	<center><br><br><br>
-	<p><a href="/">bio</a></p>
-	<p><a href="/">works</a></p>
-	<p><a href="/">scores</a></p>
-	<p><a href="/">contact</a></p>
+	<p><a href="https://eliasbrodsky.github.io/textonly.html">bio</a></p>
+	<p><a href="https://eliasbrodsky.github.io/textonly.html">works</a></p>
+	<p><a href="https://eliasbrodsky.github.io/textonly.html">scores</a></p>
+	<p><a href="https://eliasbrodsky.github.io/textonly.html">contact</a></p>
 	<br><br><br><br>
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
