--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  	<div class="cube-image">contact</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">bio</div>
+		  	<div class="cube-image"><a href="/">bio</a></div>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image active"> </div>
