--- a/secretindex.html
+++ b/secretindex.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../css/main.css" rel="stylesheet" type="text/css">
+<link href="../css/secretmain.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../css/ex.css" />
 <!--<link rel="stylesheet" href="../css/secretcube.css" />-->
 <script src="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/index.min.js"></script>
