--- a/secretindex.html
+++ b/secretindex.html
@@ -33,7 +33,7 @@
 		  	<div class="cube-image">contact</div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">bio</div>
+		  	<a href="/"><div class="cube-image">bio</div></a>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image active"> </div>
