--- a/secretindex.html
+++ b/secretindex.html
@@ -16,7 +16,7 @@
   <p>composer</p></center>
 <!-- box -->
 <br>
-    <body class="experiment">
+    <center><body class="experiment">
         <div id="wrapper">
 	   <article class="viewport">
 	     <section class="cube">
@@ -40,7 +40,7 @@
 		    </section>
 	  	</article>
      	    </div>
-	<body>
+	<body></center>
 		<br><center><p><a href="/">text only view</a></p></center>
 	<br>
 </div>
