--- a/secretindex.html
+++ b/secretindex.html
@@ -32,9 +32,9 @@
 		  <div class="side">
 		  	<div class="cube-image">contact</div>
 		  </div>
-		  <div class="side">
-		  	<a href="/"><div class="cube-image">bio</div></a>
-		  </div>
+		  <a href="/"><div class="side">
+		  	<div class="cube-image">bio</div>
+		  </div></a>
 		  <div class="side">
 		  	<div class="cube-image active"> </div>
 		    </section>
