--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -19,8 +19,8 @@
 	<center><br><br><br>
 	COMING SOON
 	<br><br><br><br>
-	<p><a href="https://eliasbrodsky.github.io/">back</a></p>
-   </div>
+	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
+   </div></div>
 	<br>
 </div>
 </div>
