--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -18,12 +18,12 @@
 <div id="comingsoon">
 	<center><br><br><br>
 	COMING SOON
-	<br><br><br><br>
+	<br><br>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div>
 	<br>
 </div>
-</div>
+</div></center>
 <!-- Main Container Ends -->
 </body>
 <center><footer>
