--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -16,9 +16,9 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="comingsoon">
-	<center><br><br><br>
+	<center><br><br>
 	COMING SOON
-	<br><br>
+	<br><br><br>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div>
 	<br>
