--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -18,9 +18,9 @@
 <div id="comingsoon">
 	<center><br><br>
 	COMING SOON
-	<br><br><br></div>
+	<br><br><br>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
-   </div>
+   </div></div>
 	<br>
 </div>
 </div></center>
