--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -17,7 +17,7 @@
 <!-- box -->
 <div id="comingsoon">
 	<center><br><br>
-	COMING SOON
+		<div id="spaces">COMING SOON</div>
 	<br><br><br>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div>
