--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -20,7 +20,7 @@
 		<div id="spaces">COMING SOON</div>
 	<br><br>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
-   </div></div>
+   </div></div></center>
 	<br>
 </div>
 </div></center>
