--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -12,7 +12,7 @@
 <body>
 <!-- Main Container -->
 <div class="container-fluid"> 
-	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
+	<center><div id="name"><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p></div>
   <p>composer</p></center>
 <!-- box -->
 <div id="comingsoon">
