--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -19,7 +19,7 @@
 	<center><br><br>
 		<div id="spaces">COMING SOON</div>
 	<br><br><br><br>
-	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
+	<div id="wrapper"><br><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div></center>
 	<br>
 </div>
