--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -17,9 +17,10 @@
 <!-- box -->
 <div id="comingsoon">
 	<center><br><br>
-		<div id="spaces">COMING SOON</div>
-	<br><br><br><br>
-	<div id="wrapper"><br><p><a href="https://eliasbrodsky.github.io/">back</a></p>
+		<div id="spaces"><p>COMING</p>
+			<p>SOON</p></div>
+	<br><br><br>
+	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div></center>
 	<br>
 </div>
