--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -18,8 +18,8 @@
 <div id="comingsoon">
 	<center><br><br>
 		<div id="spaces"><p>COMING</p>
-			<p>SOON</p></div>
-	<br><br>
+			<p>SOON</p>
+	<br><br><br></div>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div></center>
 	<br>
