--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -19,7 +19,7 @@
 	<center><br><br>
 		<div id="spaces"><p>COMING</p>
 			<p>SOON</p>
-	<br><br><br></div>
+	<br><br><br><br><br></div>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div></center>
 	<br>
