--- a/pages/comingsoon.html
+++ b/pages/comingsoon.html
@@ -16,10 +16,10 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="comingsoon">
-	<center><br><br>
+	<center><br>
 		<div id="spaces"><p>COMING</p>
 			<p>SOON</p>
-	<br><br><br><br><br></div><br>
+	<br><br><br><br><br><br></div><br>
 	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div></center>
 	<br>
