--- a/textonly.html
+++ b/textonly.html
@@ -21,7 +21,7 @@
 	<p><a href="https://eliasbrodsky.github.io/textonly.html">works</a></p>
 	<p><a href="https://eliasbrodsky.github.io/textonly.html">scores</a></p>
 	<p><a href="https://eliasbrodsky.github.io/textonly.html">contact</a></p>
-		<br><br><br><br><br><br><div id="smallspaces"><br><br><br><br><br><br><br><br><br><br></div>
+		<br><br><br><br><br><br><div id="smallspaces"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
 	<br>
