--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 		  	<div class="cube-image"> </div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">works</div>
+		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">works</a></div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">scores</div>
+		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">contact</div>
+		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image">bio</div>
+			  <div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">bio</a></div>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image active"> </div>
