--- a/textonly.html
+++ b/textonly.html
@@ -17,10 +17,10 @@
 <!-- box -->
 <div id="wrapper">
 	<center><br><br><br>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">bio</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">works</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">scores</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">contact</a></p>
+	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">bio</a></p>
+	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">works</a></p>
+	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></p>
+	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></p>
 		<br><br><br><br><br><br><div id="smallspaces"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
