--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="czTj8CanpMWm9Loj50SO4mYIrmmwaW8jfagNMzuJFbc" />
 <link href="../css/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../css/ex.css" />
 <!--<link rel="stylesheet" href="../css/secretcube.css" />-->
