--- a/comingsoon.html
+++ b/comingsoon.html
@@ -20,7 +20,7 @@
 		<div id="spaces"><p>COMING</p>
 			<p>SOON</p>
 	<br><br><br><br><br><br></div><br>
-	<div id="wrapper"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
+	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div></div></center>
 	<br>
 </div>
