--- a/pages/works.html
+++ b/pages/works.html
@@ -16,13 +16,13 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
-	<center><br><br><br>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">bio</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">works</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">scores</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">contact</a></p>
-	<br><br><br><br><br><br><br>
-		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
+	<br><br><br>
+	<p>Underwater Breathing Exercise (2020): 4.5’</p>
+	<p>for bass and alto flute duo</p>
+	<p>Commissioned by Charlotte New Music Festival</p>
+	<p>Premiered in June 2020 by Duo Zonda</p>
+	<br><br><br><br><br><br><br></div>
+	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
 </div>
