--- a/pages/works.html
+++ b/pages/works.html
@@ -17,10 +17,10 @@
 <!-- box -->
 <div id="wrapper">
 	<br><br><br>
-	<p>Underwater Breathing Exercise (2020): 4.5’</p>
-	<p>for bass and alto flute duo</p>
-	<p>Commissioned by Charlotte New Music Festival</p>
-	<p>Premiered in June 2020 by Duo Zonda</p>
+	Underwater Breathing Exercise (2020): 4.5’
+	<br>for bass and alto flute duo
+	<br>Commissioned by Charlotte New Music Festival
+	<br>Premiered in June 2020 by Duo Zonda
 	<br><br><br><br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
