--- a/pages/works.html
+++ b/pages/works.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../css/main.css" rel="stylesheet" type="text/css">
+<link href="../css/pages.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="../css/ex.css" />
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
@@ -21,13 +21,23 @@
 	<br>for bass and alto flute duo
 	<br>Commissioned by Charlotte New Music Festival
 	<br>Premiered in June 2020 by Duo Zonda
-	<br><br><br><br><br><br><br></div>
+	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
+</div>
 </div>
 <!-- Main Container Ends -->
 </body>
 <center><footer>
 	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
 	</footer></center></html>
+
+
+
+<br><br><br>
+	Underwater Breathing Exercise (2020): 4.5’
+	<br>for bass and alto flute duo
+	<br>Commissioned by Charlotte New Music Festival
+	<br>Premiered in June 2020 by Duo Zonda
+	<br>
