--- a/pages/works.html
+++ b/pages/works.html
@@ -18,9 +18,9 @@
 <div id="wrapper">
 	<br><br><br>
 	Underwater Breathing Exercise (2020): 4.5’
-	<br>for bass and alto flute duo
-	<br>Commissioned by Charlotte New Music Festival
-	<br>Premiered in June 2020 by Duo Zonda
+	<br>&nbsp;for bass and alto flute duo
+	<br><i>&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
+	<br>&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
