--- a/pages/works.html
+++ b/pages/works.html
@@ -19,8 +19,8 @@
 	<br><br><br>
 	Underwater Breathing Exercise (2020): 4.5’
 	<br>&nbsp;for bass and alto flute duo
-	<br><i>&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
-	<br>&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
