--- a/pages/works.html
+++ b/pages/works.html
@@ -17,8 +17,9 @@
 <!-- box -->
 <div id="wrapper">
 	<br><br><br>
+	
 	Underwater Breathing Exercise (2020): 4.5’
-	<br>&nbsp;for bass and alto flute duo
+	<br>for bass flute, alto flute, and electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br><br><br></div>
