--- a/pages/works.html
+++ b/pages/works.html
@@ -19,13 +19,13 @@
 	<br><br><br>
 	Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and electronics
-	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
-	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br>
 	pesky little thing (2020): 3’
 	<br>for solo violin
-	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
-	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
 	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
