--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -24,30 +24,27 @@
 </div>
 
 <!-- Tab content -->
-<div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+<div id="Solo" class="tabcontent">
+  <h3>Solo</h3>
+  <p>pesky little thing (2020): 3’
+	<br>for solo violin
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i></p>
 </div>
 
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
+<div id="Chamber" class="tabcontent">
+  <h3>Chamber</h3>
   <p>Paris is the capital of France.</p>
 </div>
 
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
-</div> 
-	<br><br><br>
-	Underwater Breathing Exercise (2020): 4.5’
+<div id="Electronic" class="tabcontent">
+  <h3>Electronic</h3>
+  <p><br>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
-	<br><br>
-	pesky little thing (2020): 3’
-	<br>for solo violin
-	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
-	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
+	<br><br></p>
+</div> 
 	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
