--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -29,18 +29,25 @@
   <p>pesky little thing (2020): 3’
 	<br>for solo violin
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
-	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i></p>
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
+	<br><br>
+	immolate (2019): 6’
+	<br>for solo cello and fixed electronics</p>
 </div>
 
 <div id="Chamber" class="tabcontent">
   <h3>Chamber</h3>
-  <p>Paris is the capital of France.</p>
+  <p>Underwater Breathing Exercise (2020): 4.5’
+	<br>for bass flute, alto flute, and fixed electronics
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
+	<br><br></p>
 </div>
 
 <div id="Electronic" class="tabcontent">
   <h3>Electronic</h3>
-  <p><br>Underwater Breathing Exercise (2020): 4.5’
-	<br>for bass flute, alto flute, and electronics
+  <p>Underwater Breathing Exercise (2020): 4.5’
+	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br></p>
