--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -32,7 +32,13 @@
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
 	<br><br>
 	immolate (2019): 6’
-	<br>for solo cello and fixed electronics</p>
+	<br>for solo cello and fixed electronics
+	<br><br>
+	three expressions (2019): 6’
+	<br>for solo saxophone
+	<br><br>
+	touch! (2018): 1.5’
+	<br>for solo piano</p>
 </div>
 
 <div id="Chamber" class="tabcontent">
@@ -41,7 +47,28 @@
 	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
-	<br><br></p>
+	<br><br>
+	beacon (2019): 2’
+	<br>for alto saxophone and flute duo
+   	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered on November 2019 by Abby Folger (flute) 
+	<br>and Max Moeck (alto saxophone)</i>
+	<br><br>
+	Supermarket Glass Doors (2019): 1’
+	<br>for alto saxophone, cello, and piano trio
+	<br><br>
+	birds by the creek (2019): 3’
+	<br>for flute trio
+	<br><br>
+	doctor’s office (2019): 2.5’
+	<br>for clarinet and piano duo
+	Shrimp (2018): 5’
+	for saxophone quartet
+	<br><br>
+	hear me, God (2018): 3’
+	<br>for two pianos
+	<br><br>
+	As If Having Lost Something (2018): 2’
+	<br>for saxophone quartet</p>
 </div>
 
 <div id="Electronic" class="tabcontent">
@@ -50,7 +77,9 @@
 	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
-	<br><br></p>
+	<br><br>
+	immolate (2019): 6’
+	<br>for solo cello and fixed electronics</p>
 </div> 
 	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
