--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -33,12 +33,12 @@
 	<br><br>
 	immolate (2019): 6’
 	<br>for solo cello and fixed electronics
-	<!--<br><br>
+	<br><br>
 	three expressions (2019): 6’
 	<br>for solo saxophone
 	<br><br>
 	touch! (2018): 1.5’
-	<br>for solo piano--></p>
+	<br>for solo piano</p>
 </div>
 
 <div id="Chamber" class="tabcontent">
@@ -52,7 +52,7 @@
 	<br>for alto saxophone and flute duo
    	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered on November 2019 by Abby Folger (flute) 
 	<br>and Max Moeck (alto saxophone)</i>
-	<!--<br><br>
+	<br><br>
 	Supermarket Glass Doors (2019): 1’
 	<br>for alto saxophone, cello, and piano trio
 	<br><br>
@@ -68,7 +68,7 @@
 	<br>for two pianos
 	<br><br>
 	As If Having Lost Something (2018): 2’
-	<br>for saxophone quartet--></p>
+	<br>for saxophone quartet</p>
 </div>
 
 <div id="Electronic" class="tabcontent">
