--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -18,7 +18,7 @@
 <div id="wrapper">
 	 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'Solo')">Solo</button> <!-- change 'city' later -->
+  <button class="tablinks" onclick="openTab(event, 'Solo')" id="defaultOpen">Solo</button>
   <button class="tablinks" onclick="openTab(event, 'Chamber')">Chamber</button>
   <button class="tablinks" onclick="openTab(event, 'Electronic')">Electronic</button>
 </div>
@@ -91,4 +91,5 @@
 </body>
 <center><footer>
 	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
+	<script> document.getElementById("defaultOpen").click();</script>
 	<script src="../js/tabs.js" type="text/javascript"></script></footer></center></html>
