--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -87,9 +87,11 @@
 	<br>
 </div>
 </div>
+	<script> 
+	document.getElementById("defaultOpen").click();
+	</script>
 <!-- Main Container Ends -->
 </body>
 <center><footer>
 	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
-	<script> document.getElementById("defaultOpen").click();</script>
 	<script src="../js/tabs.js" type="text/javascript"></script></footer></center></html>
