--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -87,9 +87,22 @@
 	<br>
 </div>
 </div>
-	<script> 
-	document.getElementById("defaultOpen").click();
-	</script>
+<script>
+  function opentab(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(tabName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+  document.getElementById("defaultOpen").click();
+</script>
 <!-- Main Container Ends -->
 </body>
 <center><footer>
