--- a/pages/secretworks.html
+++ b/pages/secretworks.html
@@ -87,7 +87,12 @@
 	<br>
 </div>
 </div>
-<script>
+<!-- Main Container Ends -->
+</body>
+<center><footer>
+	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
+	<script src="../js/tabs.js" type="text/javascript"></script>
+	<script>
   function opentab(evt, tabName) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
@@ -103,8 +108,5 @@
 }
   document.getElementById("defaultOpen").click();
 </script>
-<!-- Main Container Ends -->
-</body>
-<center><footer>
-	<div class="copyright-fluid">&copy;2020 <strong>elias brodsky</strong></div>
-	<script src="../js/tabs.js" type="text/javascript"></script></footer></center></html>
+	</footer></center></html>
+	
