Update and rename secretworks.html to works.html

--- a/pages/works.html
+++ b/pages/works.html
@@ -18,9 +18,9 @@
 <div id="wrapper">
 	 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'Solo')" id="defaultOpen">Solo</button>
-  <button class="tablinks" onclick="openTab(event, 'Chamber')">Chamber</button>
-  <button class="tablinks" onclick="openTab(event, 'Electronic')">Electronic</button>
+  <button class="tablinks" onclick="openTab(event, 'solo')" id="defaultOpen">Solo</button>
+  <button class="tablinks" onclick="openTab(event, 'chamber')">Chamber</button>
+  <button class="tablinks" onclick="openTab(event, 'electronic')">Electronic</button>
 </div>
 
 <!-- Tab content -->
@@ -81,7 +81,7 @@
 	immolate (2019): 6’
 	<br>for solo cello and fixed electronics</p>
 </div> 
-	<br><br><br><br></div>
+	<br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
