--- a/pages/works.html
+++ b/pages/works.html
@@ -18,14 +18,14 @@
 <div id="wrapper">
 	 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'solo')" id="defaultOpen">Solo</button>
-  <button class="tablinks" onclick="openTab(event, 'chamber')">Chamber</button>
-  <button class="tablinks" onclick="openTab(event, 'electronic')">Electronic</button>
+  <button class="tablinks" onclick="openTab(event, 'Solo')" id="defaultOpen">solo</button>
+  <button class="tablinks" onclick="openTab(event, 'Chamber')">chamber</button>
+  <button class="tablinks" onclick="openTab(event, 'Electronic')">electronic</button>
 </div>
 
 <!-- Tab content -->
 <div id="Solo" class="tabcontent">
-  <h3>Solo</h3>
+  <h3>SOLO</h3>
   <p>pesky little thing (2020): 3’
 	<br>for solo violin
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
@@ -42,7 +42,7 @@
 </div>
 
 <div id="Chamber" class="tabcontent">
-  <h3>Chamber</h3>
+  <h3>CHAMBER</h3>
   <p>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
@@ -72,7 +72,7 @@
 </div>
 
 <div id="Electronic" class="tabcontent">
-  <h3>Electronic</h3>
+  <h3>ELECTRONIC</h3>
   <p>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
@@ -81,7 +81,7 @@
 	immolate (2019): 6’
 	<br>for solo cello and fixed electronics</p>
 </div> 
-	<br></div>
+	<br><br><br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
@@ -109,4 +109,3 @@
   document.getElementById("defaultOpen").click();
 </script>
 	</footer></center></html>
-	
