--- a/pages/works.html
+++ b/pages/works.html
@@ -81,7 +81,7 @@
 	immolate (2019): 6’
 	<br>for solo cello and fixed electronics</p>
 </div> 
-	<br><br><br><br></div>
+	<br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
