--- a/pages/works.html
+++ b/pages/works.html
@@ -25,7 +25,7 @@
 
 <!-- Tab content -->
 <div id="Solo" class="tabcontent">
-  <h3>SOLO</h3>
+  <h3><b>SOLO</b></h3>
   <p>pesky little thing (2020): 3’
 	<br>for solo violin
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
@@ -42,7 +42,7 @@
 </div>
 
 <div id="Chamber" class="tabcontent">
-  <h3>CHAMBER</h3>
+  <h3><b>CHAMBER</b></h3>
   <p>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
@@ -72,7 +72,7 @@
 </div>
 
 <div id="Electronic" class="tabcontent">
-  <h3>ELECTRONIC</h3>
+  <h3><b>ELECTRONIC</b></h3>
   <p>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and fixed electronics
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
