--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		  	<div class="cube-image"> </div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">works</a></div>
+		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/pages/works.html">works</a></div>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></div>
