--- a/textonly.html
+++ b/textonly.html
@@ -18,7 +18,7 @@
 <div id="wrapper">
 	<center><br><br><br>
 	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">bio</a></p>
-	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">works</a></p>
+	<p><a href="https://eliasbrodsky.github.io/pages/works.html">works</a></p>
 	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></p>
 	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></p>
 		<br><br><br><br><br><br><div id="smallspaces"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
