--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,13 +16,26 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
-	<center><br><br><br>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">bio</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">works</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">scores</a></p>
-	<p><a href="https://eliasbrodsky.github.io/textonly.html">contact</a></p>
-	<br><br><br><br><br><br><br>
-		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
+  <center><div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="First name">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Last name">
+
+    <label for="email">Email address</label>
+    <input type="text" id="email" name="email" placeholder="Email address">
+	  
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div> <br>
+		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
 </div>
