--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,29 +12,29 @@
 <body>
 <!-- Main Container -->
 <div class="container-fluid"> 
-	<center><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p>
+	<center><div id="name"><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p></div>
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
   <center><div class="container">
   <form action="action_page.php">
 
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="First name">
+    <p><label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="First name"></p>
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Last name">
+    <p><label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Last name"></p>
 
-    <label for="email">Email address</label>
-    <input type="text" id="email" name="email" placeholder="Email address">
+    <p><label for="email">Email address</label>
+    <input type="text" id="email" name="email" placeholder="Email address"></p>
 	  
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea>
+    <p><label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea></p>
 
-    <input type="submit" value="Submit">
+    <p><input type="submit" value="Submit"></p>
 
   </form>
-</div> <br>
+</div><br>
 		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
