--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
-  <center><div class="container">
+  <center><!--<div class="container">-->
   <form action="action_page.php">
 
     <p><label for="fname">First Name</label>
@@ -34,7 +34,7 @@
     <p><input type="submit" value="Submit"></p>
 
   </form>
-</div><br>
+<!--</div>--><br>
 		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
