--- a/pages/works.html
+++ b/pages/works.html
@@ -28,7 +28,7 @@
   <h3><b>SOLO</b></h3>
   <p>pesky little thing (2020): 3’
 	<br>for solo violin
-	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Voices of Change
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by <a href="https://www.voicesofchange.org/">Voices of Change</a>
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
 	<br><br>
 	immolate (2019): 6’
@@ -45,13 +45,13 @@
   <h3><b>CHAMBER</b></h3>
   <p>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and fixed electronics
-	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by <a href="https://charlottenewmusic.org/">Charlotte New Music Festival</a>
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br>
 	beacon (2019): 2’
 	<br>for alto saxophone and flute duo
    	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered on November 2019 by Abby Folger (flute) 
-	<br>and Max Moeck (alto saxophone)</i>
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and Max Moeck (alto saxophone)</i>
 	<br><br>
 	Supermarket Glass Doors (2019): 1’
 	<br>for alto saxophone, cello, and piano trio
@@ -75,7 +75,7 @@
   <h3><b>ELECTRONIC</b></h3>
   <p>Underwater Breathing Exercise (2020): 4.5’
 	<br>for bass flute, alto flute, and fixed electronics
-	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by Charlotte New Music Festival
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by <a href="https://charlottenewmusic.org/">Charlotte New Music Festival</a>
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
 	<br><br>
 	immolate (2019): 6’
