--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,19 +16,21 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
-  <center><!--<div class="container">-->
+  <center><br><!--<div class="container">-->
   <form action="action_page.php">
 
-    <p><label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="First name"></p>
-
-    <p><label for="lname">Last Name</label>
+    <p><label for="fname">Name:</label>
+    <input type="text" id="fname" name="firstname" placeholder="First name">
+    <label for="lname">&nbsp;</label>
     <input type="text" id="lname" name="lastname" placeholder="Last name"></p>
 
-    <p><label for="email">Email address</label>
+    <p><label for="email">Email address:</label>
     <input type="text" id="email" name="email" placeholder="Email address"></p>
 	  
-    <p><label for="subject">Subject</label>
+    <p><label for="subject">Subject:</label>
+    <input type="text" id="subject" name="subject" placeholder="Subject"></p>
+	  
+    <p><label for="subject">Message:</label>
     <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea></p>
 
     <p><input type="submit" value="Submit"></p>
