--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,13 @@
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
-  <center><br><!--<div class="container">-->
+  <center><br>
+  <p>Contact information:</p>
+	  <p>Elias Brodsky</p>
+	  <p>888 888 8888</p>
+	  <p>ebrodskycomposer@gmail.com</p>
+	  <br>
+  <!--<div class="container">-->
   <form action="action_page.php">
 
     <p><label for="fname">Name:</label>
