--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,7 +39,7 @@
     <p><label for="subject">Message:</label>
     <textarea id="subject" name="subject" placeholder="Your message" style="height:200px"></textarea></p>
 
-    <p><input type="submit" value="Submit"></p>
+    <p><input type="submit" value="SUBMIT"></p>
 
   </form>
 <!--</div>--><br>
