--- a/pages/works.html
+++ b/pages/works.html
@@ -50,7 +50,7 @@
 	<br><br>
 	beacon (2019): 2’
 	<br>for alto saxophone and flute duo
-   	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered on November 2019 by Abby Folger (flute) 
+   	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered on November 2019 by <a href="https://www.instagram.com/flutey_tootey/">Abby Folger</a> (flute) 
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and Max Moeck (alto saxophone)</i>
 	<br><br>
 	Supermarket Glass Doors (2019): 1’
