--- a/pages/works.html
+++ b/pages/works.html
@@ -18,12 +18,56 @@
 <div id="wrapper">
 	 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'Solo')" id="defaultOpen">solo</button>
+  <button class="tablinks" onclick="openTab(event, 'All works')" id="defaultOpen">all works</button>
+  <button class="tablinks" onclick="openTab(event, 'Solo')">solo</button>
   <button class="tablinks" onclick="openTab(event, 'Chamber')">chamber</button>
   <button class="tablinks" onclick="openTab(event, 'Electronic')">electronic</button>
 </div>
 
 <!-- Tab content -->
+<div id="All works" class="tabcontent">
+  <h3><b>ALL WORKS</b></h3>
+  <p>pesky little thing (2020): 3’
+	<br>for solo violin
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by <a href="https://www.voicesofchange.org/">Voices of Change</a>
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
+	<br><br>
+	<p>Underwater Breathing Exercise (2020): 4.5’
+	<br>for bass flute, alto flute, and fixed electronics
+	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by <a href="https://charlottenewmusic.org/">Charlotte New Music Festival</a>
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in June 2020 by Duo Zonda</i>
+	<br><br>
+	immolate (2019): 6’
+	<br>for solo cello and fixed electronics
+	<br><br>
+	three expressions (2019): 6’
+	<br>for solo saxophone
+	<br><br>
+	beacon (2019): 2’
+	<br>for alto saxophone and flute duo
+   	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered on November 2019 by <a href="https://www.instagram.com/flutey_tootey/">Abby Folger</a> (flute) 
+	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and Max Moeck (alto saxophone)</i>
+	<br><br>
+	Supermarket Glass Doors (2019): 1’
+	<br>for alto saxophone, cello, and piano trio
+	<br><br>
+	birds by the creek (2019): 3’
+	<br>for flute trio
+	<br><br>
+	doctor’s office (2019): 2.5’
+	<br>for clarinet and piano duo
+	Shrimp (2018): 5’
+	for saxophone quartet
+	<br><br>
+	touch! (2018): 1.5’
+	<br>for solo piano</p>
+	hear me, God (2018): 3’
+	<br>for two pianos
+	<br><br>
+	As If Having Lost Something (2018): 2’
+	<br>for saxophone quartet</p>
+</div>
+
 <div id="Solo" class="tabcontent">
   <h3><b>SOLO</b></h3>
   <p>pesky little thing (2020): 3’
