--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,6 +21,7 @@
 	  <p>Elias Brodsky</p>
 	  <p>888 888 8888</p>
 	  <p>ebrodskycomposer@gmail.com</p>
+	  <p><a href="https://soundcloud.com/eliasbrodsky">soundcloud</a></p>
 	  <br>
 		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
