--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Main Container -->
 <div class="container-fluid"> 
-	<center><div id="name"><p><a style="text-decoration:none" href="https://eliasbrodsky.github.io/"><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p></div>
+	<center><a style="text-decoration:none" href="https://eliasbrodsky.github.io/"><div id="name"><p><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></p></div></a>
   <p>composer</p></center>
 <!-- box -->
 <br>
