--- a/pages/works.html
+++ b/pages/works.html
@@ -27,7 +27,7 @@
 <!-- Tab content -->
 <div id="All works" class="tabcontent">
   <h3><b>ALL WORKS</b></h3>
-  <p>pesky little thing (2020): 3’
+	<p><a href="https://soundcloud.com/eliasbrodsky/pesky-little-thing">pesky little thing (2020)</a>: 3’
 	<br>for solo violin
 	<br><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commissioned by <a href="https://www.voicesofchange.org/">Voices of Change</a>
 	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Premiered in August 2020 by Maria Schleuning</i>
