--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!--<link rel="stylesheet" href="../css/secretcube.css" />-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+	<title>elias brodsky</title>
 </head>
 <body>
 <!-- Main Container -->
