--- a/textonly.html
+++ b/textonly.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../css/ex.css" />
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+	<title>elias brodsky | index</title>
 </head>
 <body>
 <!-- Main Container -->
