--- a/pages/works.html
+++ b/pages/works.html
@@ -9,6 +9,7 @@
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 	<title>elias brodsky | works</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- Main Container -->
