--- a/textonly.html
+++ b/textonly.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="../css/ex.css" />
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
-	<title>elias brodsky | index</title>
+	<title>elias brodsky | text only index</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- Main Container -->
