--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--<link rel="stylesheet" href="../css/secretcube.css" />-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
-	<title>elias brodsky | index</title>
+	<title>elias brodsky</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
