--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></div>
 		  </div>
 		  <div class="side">
-			  <div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">bio</a></div>
+			  <div class="cube-image"><a href="https://eliasbrodsky.github.io/pages/bio.html">bio</a></div>
 		  </div>
 		  <div class="side">
 		  	<div class="cube-image active"> </div>
