--- a/textonly.html
+++ b/textonly.html
@@ -19,7 +19,7 @@
 <!-- box -->
 <div id="wrapper">
 	<center><br><br><br>
-	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">bio</a></p>
+	<p><a href="https://eliasbrodsky.github.io/pages/bio.html">bio</a></p>
 	<p><a href="https://eliasbrodsky.github.io/pages/works.html">works</a></p>
 	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></p>
 	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></p>
